# settleup

./: .gitignore  README.md  flake.nix  manage.py  pyproject.toml
components/: README.md
components/css/: README.md
settleup/: asgi.py  settings.py  urls.py  wsgi.py
static/js/: README.md
www/: models.py  urls.py  views.py
www/migrations/: 0001_initial.py
www/templates/www/: index.html  new_table.html  qrcode.html
